@@ -5,6 +5,8 @@ dh-python (5.20211217) UNRELEASED; urgency=medium
     (closes: 1001838)
   * Handle extraneous parentheses in requires.txt section headers.
   * pep517 plugin: Throw an error if an UNKNOWN-*.whl is built.
+  * pep517 plugin: Gracefully skip wheel unpack if it appears to have already
+    been unpacked by a package calling build twice.
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 17 Dec 2021 11:40:23 -0400
 
